--- a/KakaoMinsoo/ViewControllers/SearchDetail/SearchDetailViewController.storyboard
+++ b/KakaoMinsoo/ViewControllers/SearchDetail/SearchDetailViewController.storyboard
@@ -22,6 +22,10 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nq7-EG-gpc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Koq-LJ-mSI">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </objects>
             <point key="canvasLocation" x="75" y="-36"/>
         </scene>
